nearly finish album module
ready to do video module.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 *.class
-src/*
 libs/*
 res/*
 assets/www/tmp/*
 assets/www/img/images/
+assets/www/test/
 /.settings
 #*
 *$
@@ -49,4 +49,3 @@ gen/*
 
 # Local configuration file (sdk path, etc)
 local.properties
-assets/www/img/images
