--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -40,10 +40,16 @@
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity 
+            android:name=".MainActivity"
+            android:label=""
+            android:screenOrientation="portrait"
+            ></activity>
+        
     </application>
 
 </manifest>
