--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,8 +32,10 @@
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
 
     <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:icon="@drawable/bistu"
+        android:label="@string/app_name"
+        android:allowBackup="false"
+         >
         <activity
             android:name=".IBistuGapActivity"
             android:label="@string/app_name"
